--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,17 @@
 # History files
 .Rhistory
 .Rapp.history
-
 # Example code in package build process
 *-Ex.R
-
 # RStudio files
 .Rproj.user/
-
 # produced vignettes
 vignettes/*.html
 vignettes/*.pdf
-
 # Python files
 *.pyc
 *.csv
-
 # input data
 /input
+.Rproj.user
+springleaf.Rproj
