Adding bagged example to autotune xgboost

--- a/wormhole/async_ftrl.conf
+++ b/wormhole/async_ftrl.conf
@@ -1,6 +1,12 @@
 # demo conf
 
-train_data = "../input"
-val_data = "learn/data/agaricus.txt.test"
-model_out = "./agaricus_model"
-max_data_pass = 3
+train_data = "../input/wormholeTrain.libsvm"
+val_data = "../input/wormholeValid.libsvm"
+model_out = "./wormhole_model.csv"
+max_data_pass = 10
+
+lr_eta = 0.005 
+
+dropout = 0.1
+
+
