Adding Keras starter code. Needs a lot of tuning

--- a/wormhole/async_ftrl.conf
+++ b/wormhole/async_ftrl.conf
@@ -1,12 +1,15 @@
 # demo conf
 
-train_data = "../input/wormholeTrain.libsvm"
-val_data = "../input/wormholeValid.libsvm"
-model_out = "./wormhole_model.csv"
-max_data_pass = 10
+train_data = "../input/xtrain_v1_r2.libsvm"
+val_data = "../input/xtrain_v1_r2.libsvm"
+model_out = "./ftrl_model"
+max_data_pass = 16
 
-lr_eta = 0.005 
+lr_eta = 0.002
+lambda_l1 = 1
+lambda_l2 = 0.0001
 
-dropout = 0.1
+dropout = 0.001
 
+num_parts_per_file = 12
 
